--- a/merchandise.html
+++ b/merchandise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<link type="text/css" rel="stylesheet" href="main.css"/>
+		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 			<title> Merchandise </title>
 			<div id="nav">
 				<ul>
@@ -15,18 +15,20 @@
 				<div id="one"> 	<h1> Lubuntu Merchandise </h1> </div>
 				<div id="two"> <h2> T-Shirts </h2>
 					<div id="shirt1">	<img src="http://rlv.zcache.com/lubuntu_linux_t_shirt-rcf5c99e4dbfd48499f5a4fce75c82f3c_804gy_398.jpg"> </div>
-							<p> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p>
+							<p> <a href="http://hemansings.com/"> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p> </a>
 					<div id="shirt2">	<img src="http://ih0.redbubble.net/image.72958488.6260/figtn,220x294,asphalt,mens,ffffff.jpg"> </div>
-							<p> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p>
+							<p> <a href="http://hemansings.com/"> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p> </a>
 					<div id="shirt3">   <img src="http://web.ncf.ca/adamandruth/Ubuntu301.JPG"> </div>
-							<p> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p>
+							<p> <a href="http://hemansings.com/"> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p> </a>
 					<div id="shirt4">   <img src="https://diasp.org/uploads/images/scaled_full_83d8997626702f87fa31.JPG"> </div>
-							<p> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p>
-					<div id="shirt5">   <img src="http://rlv.zcache.co.uk/git_t_shirt_id_git_that_tshirt-rca9ae0be3ac3497ba3dc3e8a25a11880_8nhma_324.jpg"> </p>
-							<p> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p>
-					<div id="shirt5">   <img src="http://i3.cpcache.com/product/1464670681/womens_cap_sleeve_tshirt.jpg?height=350&width=350"> </p>
-							<p> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p>
+							<p> <a href="http://hemansings.com/"> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p> </a>
+					<div id="shirt5">   <img src="http://rlv.zcache.co.uk/git_t_shirt_id_git_that_tshirt-rca9ae0be3ac3497ba3dc3e8a25a11880_8nhma_324.jpg"> </p> </div>
+							<p> <a href="http://hemansings.com/"> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p> </a>
+					<div id="shirt6">   <img src="http://i3.cpcache.com/product/1464670681/womens_cap_sleeve_tshirt.jpg?height=350&width=350"> </p> </div>
+							<p> <a href="http://hemansings.com/"> <img src="https://francescamignosa.files.wordpress.com/2012/09/paypal-image.png"> </p> </a>
 				</div>
+				<div id="bottom">
+				    <p> License Terms and Conditions |  © 2015 Lubuntu Corporation | </p> </div>
 			</body>
 		</html>
 							
