--- a/merchandise.html
+++ b/merchandise.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<link type="text/css" rel="stylesheet" href="merchandise.css"/>
 			<title> Merchandise </title>
-			<div id="nav">
-				<ul>
-					<li> Home </li>
-					<li> About </li>
-					<li> Merchandise </li>
-				</ul>
-			</div>
+			<div class="nav">
+      <ul>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="About Us"><a class="active" href="#">About Us</a></li>
+        <li class="Merchandise"><a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\merchandise.html">Merchandise</a></li>
+        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
+      </ul>
+    </div>
 		</head>
 			<body>
 				<div id="one"> 	<h1> Lubuntu Merchandise </h1> </div>
