--- a/home.html
+++ b/home.html
@@ -2,13 +2,13 @@
 	<html>
 		<head>
 		<link type="text/css" rel="stylesheet" href="home.css"/>
-			<title> Merchandise </title>
+			<title> Home </title>
 			<div class="nav">
       <ul>
-        <li class="home"><a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\Nav.html">Home</a></li>
-        <li class="About Us"><a class="active" href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\aboutus.html">About Us</a></li>
-        <li class="Merchandise"><a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\merchandise.html">Merchandise</a></li>
-        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
+        <li class="Home"><a href="http://cse-www.pltw.org/~mill4h7p/home">Home</a></li>
+        <li class="About Us"><a class="active" href="http://cse-www.pltw.org/~mill4h7p/aboutus">About Us</a></li>
+        <li class="Merchandise"><a href="http://cse-www.pltw.org/~mill4h7p/merchandise">Merchandise</a></li>
+        <a href="http://cse-www.pltw.org/~mill4h7p/home"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
       </ul>
     </div>
 		</head>
@@ -19,8 +19,8 @@
 					<p> Lubuntu (/lʊˈbʊntuː/ loo-BUUN-too) is a lightweight Linux distribution based on Ubuntu but using the LXDE desktop environment in place of Ubuntu's Unity shell and GNOME desktop. LXDE is touted as being "lighter, less resource hungry and more energy-efficient" </p>
 					<div id="members">	<h2>Welcome to our Page </h2> </div>
 	                       <p> Feel free to roam in the 2 pages that we're only able to make! </p>
-	                   <a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\aboutus.html"> <h2> About Us </h2> </a>
-	                   <a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\merchandise.html"> <h2> Merchandise </h2>
+	                   <a href="http://cse-www.pltw.org/~mill4h7p/aboutus"> <h2> About Us </h2> </a>
+	                   <a href="http://cse-www.pltw.org/~mill4h7p/merchandise"> <h2> Merchandise </h2> </a>
 				</div>
 				<div id="bottom">
 				    <p> License Terms and Conditions |  © 2015 Lubuntu Corporation | </p> </div>
