--- a/merchandise.html
+++ b/merchandise.html
@@ -5,10 +5,10 @@
 			<title> Merchandise </title>
 			<div class="nav">
       <ul>
-        <li class="home"><a href="#">Home</a></li>
-        <li class="About Us"><a class="active" href="#">About Us</a></li>
-        <li class="Merchandise"><a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\merchandise.html">Merchandise</a></li>
-        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
+        <li class="home"><a href="http://cse-www.pltw.org/~mill4h7p/home">Home</a></li>
+        <li class="About Us"><a class="active" href="http://cse-www.pltw.org/~mill4h7p/aboutus">About Us</a></li>
+        <li class="Merchandise"><a href="http://cse-www.pltw.org/~mill4h7p/merchandise">Merchandise</a></li>
+        <a href="http://cse-www.pltw.org/~mill4h7p/home"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
       </ul>
     </div>
 		</head>
