--- a/aboutus.html
+++ b/aboutus.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<link type="text/css" rel="stylesheet" href="aboutus.css"/>
-			<title> Merchandise </title>
+		<link type="text/css" rel="stylesheet" href="main.css"/>
+			<title> About Us </title>
 			<div class="nav">
       <ul>
-        <li class="home"><a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\Nav.html">Home</a></li>
-        <li class="About Us"><a class="active" href="#">About Us</a></li>
-        <li class="Merchandise"><a href="C:\Users\10043593\Documents\GitHub\Lubuntu-Web-Page\merchandise.html">Merchandise</a></li>
-        <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
+        <li class="home"><a href="http://cse-www.pltw.org/~mill4h7p/home">Home</a></li>
+        <li class="About Us"><a class="active" href="http://cse-www.pltw.org/~mill4h7p/aboutus">About Us</a></li>
+        <li class="Merchandise"><a href="http://cse-www.pltw.org/~mill4h7p/merchandise">Merchandise</a></li>
+        <a href="http://cse-www.pltw.org/~mill4h7p/home"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Lubuntu_logo.svg/2000px-Lubuntu_logo.svg.png"></a>
       </ul>
     </div>
 		</head>
@@ -16,9 +16,9 @@
 				<div id="one"> 	<h1> About Us </h1> </div>
 				<div id="two"> <h2> Who We Are </h2>
 					<div id="lubuntu">	<p> We Good. </p>	 </div>
-					<div id="members">	<h2> Members. </h2> </div>
+					<div id="members">	<h2> Members </h2> </div>
 	                    <li> Dhiva Krishna </li>
-                        <li> Cameron Lau-Scrum Master </li>
+                        <li> Cameron Lau </li>
                         <li> Alisha Laroia</li>
         <li> Sachin Shah </li>
         <li> Chelsea Truesdell</li>
